<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_event"
            android:textSize="39sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="120dp"/>

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/buttonPickDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_date" />

        <Button
            android:id="@+id/buttonPickTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_time"
            android:layout_marginTop="8dp" />

        <Switch
            android:id="@+id/switchRemind"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/remind_me_on_the_day"
            android:layout_marginTop="12dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <EditText
            android:id="@+id/editNotes"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:hint="@string/notes"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</ScrollView>
